# multiplat_sample

./: .gitlab-ci.yml  CMakeLists.txt  README.md
cmakes/: arm64.cmake  x64.cmake
include/: lib.h
lib/include/: lib.h
lib/src/: libmain.c
src/: main.c
